RSA encryption && decryption added

--- a/blogapp/templates/blog/base.html
+++ b/blogapp/templates/blog/base.html
@@ -11,6 +11,7 @@
         <div class="page-header">
             <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
             <a href="{% url 'comment_list' %}" class="top-menu">Comments</span></a>
+            <a href="{% url 'signature_list' %}" class="top-menu">Signatures</span></a>
             <h1><a href="/">Blog</a></h1>
         </div>
         <div class="content container">
